FIX: Correct nav bar styling so that it is a column on smaller screens adn tehn sits in a row on screens from 768 up.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ h1 {
 /* Navbar */
 nav {
 
-    display: flex;
+    display: grid;
     flex-direction: row;
     width: 100%;
     margin-left: 4px;   
@@ -66,7 +66,7 @@ nav {
 }
 
 nav ul {
-    display: flex;
+    display: grid;
     list-style-type: none;
     flex-direction: column;
 }
@@ -83,9 +83,9 @@ nav ul li a {
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
- a {
+ /*a {
     font-size: 1rem;
- }
+ }*/
 
 /* Main Content */
 main {
@@ -379,11 +379,10 @@ footer {
         flex-direction: column;
         align-items: flex-start;
     }
-    nav {
-        font-size: 1rem;
-    }
+    
     nav ul {
-        flex-direction: column;
+        display: flex;
+        flex-direction: row;
         margin-top: 10px;
     }
     nav ul li {
